<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:padding="10dp"
        android:text="@string/schedule"
        android:id="@+id/new_profile_title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/from_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="?android:attr/textColorTertiary"
            android:textStyle="normal|bold"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="?android:attr/textColorTertiary"
            android:textStyle="normal|bold"
            android:layout_weight="1"
            android:id="@+id/fromTimeValue" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_add_alarm_black_24dp"
            android:id="@+id/fromTimeSetter" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/to_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="?android:attr/textColorTertiary"
            android:textStyle="normal|bold"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="?android:attr/textColorTertiary"
            android:textStyle="normal|bold"
            android:layout_weight="1"
            android:id="@+id/toTimeValue" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_add_alarm_black_24dp"
            android:id="@+id/toTimeSetter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancelScheduler" />
        <Button
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/setSchedule" />
    </LinearLayout>
</LinearLayout>
