<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:padding="10dp"
        android:text="@string/battery_title"
        android:id="@+id/new_profile_title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/minBatteryVal" />

        <io.apptik.widget.MultiSlider
            android:id="@+id/batteryLimitRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:scaleMin="1"
            app:scaleMax="100"
            app:thumbNumber="2"
            app:stepsThumbsApart="1"
            android:layout_weight="1"
            app:drawThumbsApart="true" />

        <TextView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/maxBatteryVal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancelBattery" />
        <Button
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/setBattery" />
    </LinearLayout>
</LinearLayout>
